# strap

./: CMakeLists.txt  LICENSE.txt  README.md  strap.c  strap.h
include/: strap.h
src/: strap.c  strap_array.c  strap_array_char.c  strap_array_double.c  strap_array_float.c  strap_array_int.c  strap_array_long.c  strap_array_longdouble.c  strap_array_num.c  strap_array_num.h  strap_array_num_cast.c  strap_array_short.c  strap_array_str.c  strap_array_str.h  strap_internal.h  strap_internal_num_array.h  strap_string.c  strap_types.h  strap_util.c  strap_util.h
tests/: test.c
